Tidy up presentation Fixed missing percentages for gender split. Repositioned legend for distribution graph so no longer clipped. Fixed alignment of distribution graph to match that of other 2 on same level. Adjusted paragraph font-size to make more readable. Fixed error on salary chart to display correctly - set elasticY to false.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,5 +40,6 @@
 }
 
 .section-paragraph {
-	line-height: 1.2;
+    font-size: 1.1em;
+	line-height: 1.2em;
 }
